{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 32,
  "lineage": "a34eaef9-8b5d-b59e-279c-5fef34ab7d8e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dotdash",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4a70bd98c6d6441",
            "arn": "arn:aws:ec2:ap-south-1:983416931329:instance/i-063f73cc44e84e60c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063f73cc44e84e60c",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "dotdash2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09dc0a17e3e2fcec7",
            "private_dns": "ip-10-0-2-115.ap-south-1.compute.internal",
            "private_ip": "10.0.2.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c7738c4f86a7d5ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a15e844b7e864158",
            "tags": {
              "Name": "dotdash"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f2ae5758cdd2fd31"
            ]
          },
          "dependencies": [
            "aws_security_group.secgroup",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dotdash",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983416931329:internet-gateway/igw-06865f12cc7305d8f",
            "id": "igw-06865f12cc7305d8f",
            "owner_id": "983416931329",
            "vpc_id": "vpc-0298e874e3cc578d3"
          },
          "dependencies": [
            "aws_vpc.dotdash"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c941a7c768860e02",
            "owner_id": "983416931329",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-0298e874e3cc578d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dotdash"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-037e8132fa1c4fdc5",
            "owner_id": "983416931329",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06865f12cc7305d8f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-0298e874e3cc578d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dotdash",
            "aws_vpc.dotdash"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098b5d844650ef637",
            "route_table_id": "rtb-0c941a7c768860e02",
            "subnet_id": "subnet-0a15e844b7e864158"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.dotdash"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f562ffaea377c771",
            "route_table_id": "rtb-037e8132fa1c4fdc5",
            "subnet_id": "subnet-0d1afe94a862e3c62"
          },
          "dependencies": [
            "aws_internet_gateway.dotdash",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.dotdash"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983416931329:security-group/sg-0f2ae5758cdd2fd31",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f2ae5758cdd2fd31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "secgroup",
            "name_prefix": "",
            "owner_id": "983416931329",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0298e874e3cc578d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dotdash"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983416931329:subnet/subnet-0a15e844b7e864158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a15e844b7e864158",
            "map_public_ip_on_launch": false,
            "owner_id": "983416931329",
            "vpc_id": "vpc-0298e874e3cc578d3"
          },
          "dependencies": [
            "aws_vpc.dotdash"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983416931329:subnet/subnet-0d1afe94a862e3c62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d1afe94a862e3c62",
            "map_public_ip_on_launch": false,
            "owner_id": "983416931329",
            "vpc_id": "vpc-0298e874e3cc578d3"
          },
          "dependencies": [
            "aws_vpc.dotdash"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dotdash",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:983416931329:vpc/vpc-0298e874e3cc578d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f805905556cc072b",
            "default_route_table_id": "rtb-0627936541b82c853",
            "default_security_group_id": "sg-02d732785392a9b99",
            "dhcp_options_id": "dopt-e4c11c8f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0298e874e3cc578d3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0627936541b82c853",
            "owner_id": "983416931329"
          }
        }
      ]
    }
  ]
}